[package]
name = "marketplace"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.0"
uint = { version = "0.9.3", default-features = false }
regex = "1.7.2"
base64 = "0.21.0"
aes = "0.8.2"
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []


